# advent-of-code

./: CMakeLists.txt  README.md
include/: utility.hpp
include/2022/: day_01.hpp
source/2022/: CMakeLists.txt  day_01_1.cpp  day_01_2.cpp
